test/type_error/unitary_on_cvar.rqcpp
qbits q[1]

procedure main():
    x = 1
    T(x)